tests/NormalTests/paczka1/fuzzy1/15698947.err
Error in line 4: Lu4b1UI A998 46,6
Error in line 17: z7LSSQ4 A267 83,3
Error in line 16: JvywDqJQ A267 10,5
Error in line 25: XzNM3tM A998 367,0
